--- a/config-repo/api-gateway.properties
+++ b/config-repo/api-gateway.properties
@@ -1,4 +1,5 @@
-zuul.routes.api-a.path=/api-a/**
+#api-a±äÎªapi-aa
+zuul.routes.api-a.path=/api-aa/**
 zuul.routes.api-a.serviceId=HELLO-SERVICE
 
 zuul.routes.api-b.path=/api-b/**
