#加密解密 spring.datasource.name=test spring.datasource.password={cipher}FKSAJDFGYOS8F7GLHAKERGFHLSAJ

--- a/config-repo/api-gateway.properties
+++ b/config-repo/api-gateway.properties
@@ -7,3 +7,7 @@ zuul.routes.api-b.serviceId=FEIGN-CONSUMER
 
 zuul.routes.api-c.path=/ccc/**
 zuul.routes.api-c.serviceId=HELLO-SERVICE
+
+#º”√‹Ω‚√‹
+spring.datasource.name=test
+spring.datasource.password={cipher}FKSAJDFGYOS8F7GLHAKERGFHLSAJ
